--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -18,3 +18,32 @@
   height: 50px;
   width: 100px;
 }
+
+.tracking-container {
+  outline: 3px solid teal;
+}
+
+.sale-modal {
+  position: fixed;
+  z-index: 500;
+  background-color: white;
+  width: 70%;
+  border: 1px solid #ccc;
+  box-shadow: 1px 1px 1px black;
+  padding: 16px;
+  left: 15%;
+  top: 30%;
+  box-sizing: border-box;
+  transition: all 0.3s ease-out;
+}
+
+@media (min-width: 600px) {
+  .sale-modal {
+    width: 500px;
+    left: calc(50% - 250px);
+  }
+}
+
+.modal-close {
+  float: right;
+}
