minor tweak to make sales data more readable for devs

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -9,6 +9,11 @@
   margin-bottom: 1rem;
 }
 
+.sale-data-container div {
+  height: 50px;
+  min-width: 200px;
+}
+
 .user-link-container {
   display: flex;
   justify-content: space-around;
