tweaked displayed data on users page for admin

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -20,8 +20,8 @@
 }
 
 .user-link-container div {
-  height: 50px;
-  width: 100px;
+  min-height: 50px;
+  min-width: 100px;
 }
 
 .tracking-container {
