tweaked modal styling for easier testing

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -52,3 +52,17 @@
 .modal-close {
   float: right;
 }
+
+.sale-form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input-container {
+  width: 100%;
+}
+
+.input-container * {
+  width: 100%;
+}
