--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -7,11 +7,14 @@
   display: flex;
   justify-content: space-around;
   margin-bottom: 1rem;
+  border-bottom: 1px solid blue;
 }
 
 .sale-data-container div {
   height: 50px;
   min-width: 200px;
+  border: 1px solid black;
+  text-align: center;
 }
 
 .user-link-container {
@@ -86,7 +89,7 @@
   left: 0;
   right: 0;
   z-index: 100;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .modal-box {
@@ -98,7 +101,7 @@
   width: 60%;
   overflow-y: auto;
   background-color: white;
-  box-shadow: 0 0 10px rgba(0,0,0,0.25);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
   z-index: 101;
   padding: 40px;
 }
